Fix mobile scrollbar position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1956,7 +1956,7 @@ nav {
 
   /* Lift the scroll-bar clear of the taller mobile nav bar, and thicken it slightly */
   .scroll-bar {
-    bottom: 90px;
+    bottom: 45px;
     height: 3px;
   }
 
